# src/main/routes/account/account-routes.ts
@@ -3,6 +3,7 @@ import { adaptRoute } from '../../adpters/express-route-adapter'
 import { makeAuthenticationAccountController } from '../../factories/account/login/login-controller-factories'
 import { makeAddAccountController } from '../../factories/account/add-account/add-account-factories'
 import { makeGetAccountByTokenController } from '../../factories/account/get-account-by-token/get-account-by-token-factories'
+import { makeRefreshTokenController } from '../../factories/account/refresh-token/refresh-token-factories'
 
 export default (router: Router): void => {
   // Login
@@ -13,4 +14,7 @@ export default (router: Router): void => {
 
   // Get User
   router.get('/user', adaptRoute(makeGetAccountByTokenController()))
+
+  // Refresh Token
+  router.get('/token', adaptRoute(makeRefreshTokenController()))
 }
